[package]

name = "cardano-mnemonic-generator"
version = "0.5.1"
authors = [ "Sungjoon Kim <methodtweak@naver.com>" ]
license = "MIT/Apache-2.0"
homepage = "https://github.com/method76/bip39-rs/"
repository = "https://github.com/method76/bip39-rs/"
readme = "README.md"
description = "Forked from BIP-0039 Rust implementation"
documentation = "https://docs.rs/bip39"
keywords = ["bip39", "bitcoin", "mnemonic", "cardano", "ADA"]

[lib]
name = "bip39"
path = "src/lib.rs"


[dependencies]
error-chain ="^0.11.0"
bitreader = "^0.3.0"
bit-vec = "^0.4.3"
ring = "^0.12"
rand = "^0.3.15"
data-encoding = "^2.0"
lazy_static = "^0.2"
